--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -22,7 +22,8 @@
     " - List popular languages for Data Science\n",
     " - List commonly used libraries used by Data Scientists\n",
     " - List Data Science Tools\n",
-    " - Introduce arithmetic expressions"
+    " - Introduce arithmetic expressions\n",
+    " - Use table format"
    ]
   },
   {
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
